# vtuber_renderer

./: CMakeLists.txt  README.md  build.bat  run.bat
code/: main.cpp
code/modules/app/: app.ixx
code/modules/core/: core.ixx
code/modules/cstd/: cstd.ixx
code/modules/gpu/: gpu-instance.ixx  gpu-vulkan-loader.ixx  gpu-vulkan-vendor.ixx  gpu-vulkan.ixx  gpu.ixx
code/modules/platform/: platform-event.ixx  platform-input.ixx  platform-logger.cpp  platform-logger.ixx  platform-timer.ixx  platform-window.ixx  platform.ixx
code/modules/platform/win32/: platform-logger-win32.cpp  platform-timer-win32.cpp  platform-win32.cpp  platform-window-win32.cpp  platform-window.cpp
code/modules/renderer/: renderer.ixx
